--- a/.env.exemple
+++ b/.env.exemple
@@ -1,1 +1,9 @@
-GEMINI_API_KEY=exemple_api
+GEMINI_API_KEY=your_gemini_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
+
+CV_PATH="path/to/your/cv.pdf"
+SUMMARY_PATH="path/to/your/summary.txt"
+NAME_SURNAME="Your Name"
