--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "anthropic>=0.57.1",
     "google-generativeai>=0.8.5",
     "gradio>=5.37.0",
+    "ipywidgets>=8.1.7",
+    "notebook>=7.4.4",
     "openai>=1.97.0",
     "pypdf>=5.8.0",
     "python-dotenv>=1.1.1",
