--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "ipywidgets>=8.1.7",
     "notebook>=7.4.4",
     "openai>=1.97.0",
+    "openai-agents>=0.2.10",
     "pypdf>=5.8.0",
     "python-dotenv>=1.1.1",
+    "sendgrid>=6.12.4",
 ]
