--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.57.1",
+    "google-api-python-client>=2.176.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.2",
     "google-generativeai>=0.8.5",
     "gradio>=5.37.0",
     "ipywidgets>=8.1.7",
