--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "openai>=1.97.0",
     "openai-agents>=0.2.10",
     "pypdf>=5.8.0",
+    "python-decouple>=3.8",
     "python-dotenv>=1.1.1",
     "sendgrid>=6.12.4",
 ]
